--- a/commission.html
+++ b/commission.html
@@ -10,23 +10,20 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "commission.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "commission.css"], "outOfDate":[]};
 </script>
   
   <title>commission</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-__.css?crc=4030053580"/>
-  <link rel="stylesheet" type="text/css" href="css/commission.css?crc=342464095" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-__.css?crc=401565179"/>
+  <link rel="stylesheet" type="text/css" href="css/commission.css?crc=293245199" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu447"><!-- group -->
-    <div class="browser_width" id="u447-bw">
-     <div class="rgba-background" id="u447"><!-- simple frame --></div>
-    </div>
-    <img class="mse_pre_init" id="u453-49" alt="♡委託♡ （請詳讀注意事項） 非商業委託流程： ♡ 私訊討論報價 ➡ 草稿(可免費修一次) ➡ 付訂金 ➡ 完稿小圖預覽 ➡ 付款 ➡ 雲端給圖/寄信箱 注意事項： ♡ 請用FB/ IG聯絡討論 ♡ 每張圖片都還可以點進去看細項跟更多範例圖ξ( ✿＞◡❛) ♡ 皆為非商業用途，公開或使用圖時請標註我！ ♡ 接原創/二創/夢向/色圖/BG/BL/GL，不接獸人/人外 ♡ 所有項目皆會按複雜程度調價 ♡ 完成圖可能會公佈在個人繪帳 尺寸： ♡ 大部分為2000*2000 300dpi（有不一樣的會再討論！） ♡ 7-14個工作天 付款方式： ♡ 無褶匯款/ATM轉帳（手續費自付）/ 蝦皮 / 超商代碼 聯絡方式： ♡ FB ♡ IG " width="384" height="446" src="images/u453-49.png?crc=4020284924" data-hidpi-src="images/u453-49_2x.png?crc=3859149640"/><!-- rasterized frame -->
+   <div class="browser_width" id="u447-bw">
+    <div class="rgba-background" id="u447"><!-- simple frame --></div>
    </div>
    <div class="clearfix grpelem" id="ppu448-7"><!-- column -->
     <div class="clearfix colelem" id="pu448-7"><!-- group -->
@@ -35,35 +32,54 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clip_frame grpelem" id="u463" href="https://www.instagram.com/w._.stone/" target="_blank"><!-- image --><img class="block" id="u463_img" src="images/ig.png?crc=197799432" data-hidpi-src="images/ig_2x.png?crc=4242854763" alt="" width="33" height="33"/></a>
     </div>
     <div class="browser_width colelem" id="u898-bw">
-     <div id="u898"><!-- group -->
+     <div id="u898"><!-- column -->
       <div class="clearfix" id="u898_align_to_page">
-       <div class="SlideShowWidget clearfix grpelem" id="slideshowu352"><!-- none box -->
-        <div class="popup_anchor" id="u362popup">
-         <div class="SlideShowContentPanel clearfix" id="u362"><!-- stack box -->
-          <div class="SSSlide clip_frame grpelem" id="u363"><!-- image -->
-           <img class="block ImageInclude" id="u363_img" data-src="images/7cd375_6ac28c143be64c34975398552231e5fa~mv2.jpg?crc=4164153567" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
-          </div>
-          <div class="SSSlide invi clip_frame grpelem" id="u1136"><!-- image -->
-           <img class="block ImageInclude" id="u1136_img" data-src="images/7cd375_3ae91453b22f4cca87f1ec57035e8925~mv2.jpg?crc=4034308210" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
-          </div>
-          <div class="SSSlide invi clip_frame grpelem" id="u1156"><!-- image -->
-           <img class="block ImageInclude" id="u1156_img" data-src="images/7cd375_5c0cad4f1f2b454eab530ed4efc4438f~mv2.jpg?crc=421916817" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
-          </div>
-          <div class="SSSlide invi clip_frame grpelem" id="u1176"><!-- image -->
-           <img class="block ImageInclude" id="u1176_img" data-src="images/7cd375_7d505d56b9fb4870a3e1a210705324c9~mv2.jpg?crc=3924156976" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
-          </div>
-          <div class="SSSlide invi clip_frame grpelem" id="u1196"><!-- image -->
-           <img class="block ImageInclude" id="u1196_img" data-src="images/7cd375_ded9a73bc43f42b39db6b12a606a3ae7~mv2.jpg?crc=250229064" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
+       <div class="position_content" id="u898_position_content">
+        <div class="clearfix colelem" id="pu1409"><!-- group -->
+         <a class="nonblock nontext museBGSize grpelem" id="u1409" href="index.html"><!-- simple frame --></a>
+         <a class="nonblock nontext MuseLinkActive museBGSize grpelem" id="u1384" href="commission.html"><!-- simple frame --></a>
+        </div>
+        <img class="colelem" id="u453-49" alt="♡委託♡ （請詳讀注意事項） 非商業委託流程： ♡ 私訊討論報價 ➡ 草稿(可免費修一次) ➡ 付訂金 ➡ 完稿小圖預覽 ➡ 付款 ➡ 雲端給圖/寄信箱 注意事項： ♡ 請用FB/ IG聯絡討論 ♡ 每張圖片都還可以點進去看細項跟更多範例圖ξ( ✿＞◡❛) ♡ 皆為非商業用途，公開或使用圖時請標註我！ ♡ 接原創/二創/夢向/色圖/BG/BL/GL，不接獸人/人外 ♡ 所有項目皆會按複雜程度調價 ♡ 完成圖可能會公佈在個人繪帳 尺寸： ♡ 大部分為2000*2000 300dpi（有不一樣的會再討論！） ♡ 7-14個工作天 付款方式： ♡ 無褶匯款/ATM轉帳（手續費自付）/ 蝦皮 / 超商代碼 聯絡方式： ♡ FB ♡ IG " width="384" height="446" src="images/u453-49.png?crc=4020284924" data-hidpi-src="images/u453-49_2x.png?crc=3859149640"/><!-- rasterized frame -->
+        <div class="clearfix colelem" id="pslideshowu352"><!-- group -->
+         <div class="SlideShowWidget clearfix grpelem" id="slideshowu352"><!-- none box -->
+          <div class="popup_anchor" id="u362popup">
+           <div class="SlideShowContentPanel clearfix" id="u362"><!-- stack box -->
+            <div class="SSSlide clip_frame grpelem" id="u363"><!-- image -->
+             <img class="block ImageInclude" id="u363_img" data-src="images/7cd375_6ac28c143be64c34975398552231e5fa~mv2.jpg?crc=4164153567" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
+            </div>
+            <div class="SSSlide invi clip_frame grpelem" id="u1136"><!-- image -->
+             <img class="block ImageInclude" id="u1136_img" data-src="images/7cd375_3ae91453b22f4cca87f1ec57035e8925~mv2.jpg?crc=4034308210" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
+            </div>
+            <div class="SSSlide invi clip_frame grpelem" id="u1156"><!-- image -->
+             <img class="block ImageInclude" id="u1156_img" data-src="images/7cd375_5c0cad4f1f2b454eab530ed4efc4438f~mv2.jpg?crc=421916817" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
+            </div>
+            <div class="SSSlide invi clip_frame grpelem" id="u1176"><!-- image -->
+             <img class="block ImageInclude" id="u1176_img" data-src="images/7cd375_7d505d56b9fb4870a3e1a210705324c9~mv2.jpg?crc=3924156976" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
+            </div>
+            <div class="SSSlide invi clip_frame grpelem" id="u1196"><!-- image -->
+             <img class="block ImageInclude" id="u1196_img" data-src="images/7cd375_ded9a73bc43f42b39db6b12a606a3ae7~mv2.jpg?crc=250229064" src="images/blank.gif?crc=4208392903" alt="" data-width="424" data-height="424"/>
+            </div>
+           </div>
           </div>
          </div>
+         <img class="grpelem" id="u1316-14" alt="半身頭貼 NT.500 (加手＋NT.100) ♡ 可上單色背景色！" width="313" height="235" src="images/u1316-14.png?crc=4040907380" data-hidpi-src="images/u1316-14_2x.png?crc=4184408686"/><!-- rasterized frame -->
         </div>
        </div>
-       <img class="grpelem" id="u1316-14" alt="半身頭貼 NT.500 (加手＋NT.100) ♡ 可上單色背景色！" width="313" height="235" src="images/u1316-14.png?crc=4040907380" data-hidpi-src="images/u1316-14_2x.png?crc=4184408686"/><!-- rasterized frame -->
       </div>
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1082" data-content-above-spacer="1265" data-content-below-spacer="183"></div>
+   <div class="verticalspacer" data-offset-top="1306" data-content-above-spacer="1265" data-content-below-spacer="61"></div>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="images/home-home2.png?crc=235382737" alt=""/>
+   <img class="preload" src="images/home-home_2x2.png?crc=49740971" alt=""/>
+   <img class="preload" src="images/home-home3.png?crc=22780217" alt=""/>
+   <img class="preload" src="images/home-home_2x3.png?crc=334386822" alt=""/>
+   <img class="preload" src="images/home-commission2.png?crc=4248076307" alt=""/>
+   <img class="preload" src="images/home-commission_2x2.png?crc=32319927" alt=""/>
+   <img class="preload" src="images/home.png?crc=404926519" alt=""/>
+   <img class="preload" src="images/home_2x.png?crc=200644759" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -76,7 +92,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="伺服器上的某些檔案可能遺失或不正確。請清除瀏覽器快取後再試一次。若問題持續發生，請聯絡網站作者。",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch","jquery.scrolleffects"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
@@ -86,7 +102,6 @@ Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized');
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.initWidget('#slideshowu352', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:2000,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:2000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu352 */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u453-49').registerPositionScrollEffect([{"speed":[1,0],"in":[-Infinity,-50]},{"speed":[0,1],"in":[-50,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
