--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
   <title>首頁</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-__.css?crc=3973185881"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3897434814" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-__.css?crc=401565179"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=42365959" id="pagesheet"/>
    </head>
  <body>
 
@@ -34,21 +34,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u898-bw">
      <div id="u898"><!-- column -->
       <div class="clearfix" id="u898_align_to_page">
-       <div class="clearfix colelem" id="pu326"><!-- group -->
-        <div class="museBGSize grpelem" id="u326"><!-- simple frame --></div>
-        <a class="nonblock nontext museBGSize grpelem" id="u285" href="commission.html"><!-- simple frame --></a>
+       <div class="clearfix colelem" id="pu1409"><!-- group -->
+        <a class="nonblock nontext MuseLinkActive museBGSize grpelem" id="u1409" href="index.html"><!-- simple frame --></a>
+        <a class="nonblock nontext museBGSize grpelem" id="u1384" href="commission.html"><!-- simple frame --></a>
        </div>
-       <div class="SlideShowWidget clearfix HeroFillFrame colelem" id="slideshowu811"><!-- none box -->
+       <div class="SlideShowWidget clearfix HeroFitContent colelem" id="slideshowu811"><!-- none box -->
         <div class="popup_anchor" id="u821popup">
          <div class="SlideShowContentPanel clearfix" id="u821"><!-- stack box -->
           <div class="SSSlide clip_frame grpelem" id="u822"><!-- image -->
-           <img class="ImageInclude" id="u822_img" data-src="images/cactus.jpg?crc=491424337" src="images/blank.gif?crc=4208392903" alt="" data-width="1280" data-height="960"/>
-          </div>
-          <div class="SSSlide invi clip_frame grpelem" id="u824"><!-- image -->
-           <img class="ImageInclude" id="u824_img" data-src="images/road.jpg?crc=180693847" src="images/blank.gif?crc=4208392903" alt="" data-width="1280" data-height="960"/>
-          </div>
-          <div class="SSSlide invi clip_frame grpelem" id="u826"><!-- image -->
-           <img class="ImageInclude" id="u826_img" data-src="images/trees.jpg?crc=4071309946" src="images/blank.gif?crc=4208392903" alt="" data-width="1280" data-height="960"/>
+           <img class="ImageInclude" id="u822_img" data-src="images/%e5%80%8b%e5%b1%95%e4%b8%bb%e8%a6%96%e8%a6%ba1.jpg?crc=4275477829" src="images/blank.gif?crc=4208392903" alt="" data-width="1280" data-height="475"/>
           </div>
          </div>
         </div>
@@ -60,14 +54,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="verticalspacer" data-offset-top="738" data-content-above-spacer="1265" data-content-below-spacer="527"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/home-u326-r-fr.png?crc=369669368" alt=""/>
-   <img class="preload" src="images/home-u326-r-fr_2x.png?crc=134407970" alt=""/>
-   <img class="preload" src="images/home-u326-m-fr.png?crc=4001269312" alt=""/>
-   <img class="preload" src="images/home-u326-m-fr_2x.png?crc=3758240669" alt=""/>
-   <img class="preload" src="images/home-u285-r-fr.png?crc=3806393210" alt=""/>
-   <img class="preload" src="images/home-u285-r-fr_2x.png?crc=528280012" alt=""/>
-   <img class="preload" src="images/home-u285-m-fr.png?crc=4163997383" alt=""/>
-   <img class="preload" src="images/home-u285-m-fr_2x.png?crc=90251029" alt=""/>
+   <img class="preload" src="images/home-home2.png?crc=235382737" alt=""/>
+   <img class="preload" src="images/home-home_2x2.png?crc=49740971" alt=""/>
+   <img class="preload" src="images/home-home3.png?crc=22780217" alt=""/>
+   <img class="preload" src="images/home-home_2x3.png?crc=334386822" alt=""/>
+   <img class="preload" src="images/home-commission2.png?crc=4248076307" alt=""/>
+   <img class="preload" src="images/home-commission_2x2.png?crc=32319927" alt=""/>
+   <img class="preload" src="images/home.png?crc=404926519" alt=""/>
+   <img class="preload" src="images/home_2x.png?crc=200644759" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -80,7 +74,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="伺服器上的某些檔案可能遺失或不正確。請清除瀏覽器快取後再試一次。若問題持續發生，請聯絡網站作者。",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch","jquery.scrolleffects"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
@@ -90,8 +84,6 @@ Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized');
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.initWidget('#slideshowu811', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:2000,slideLinkStopsSlideShow:false,transitionStyle:'horizontal',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'fullWidth',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu811 */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u326').registerBackgroundPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,-30]},{"speed":[0,1],"in":[-30,Infinity]}]);/* scroll effect */
-$('#u285').registerBackgroundPositionScrollEffect([{"speed":[0,4.1],"in":[-Infinity,-30]},{"speed":[0,1],"in":[-30,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
